_sass/projects: fix horizontal scroll of code
The horizontal scroll was not visible unless you scrolled all the way
to the bottom.

Fixes: https://github.com/pybricks/support/issues/907

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -11,3 +11,7 @@
     max-height: 80vh;
     overflow: auto;
 }
+
+pre.highlight {
+    overflow: unset;
+}
